--- a/UI/index.html
+++ b/UI/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="quizModule">
 
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <title>QuizMe :: Quiz Application</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
 
@@ -17,7 +17,7 @@
     <header>
         <!-- Fixed navbar -->
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="#">Fixed navbar</a>
+            <a class="navbar-brand" href="#">QuizMe</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
                 aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -43,13 +43,13 @@
     </header>
     <main role="main" class="container">
         <div class="mt-3">
-            <h1>heading</h1>
+            <h1>General Knowledge Quiz</h1>
         </div>
-        <p class="lead">text content</p>
+        <!--<p class="lead">text content</p>-->
     </main>
 
-    <div class="container">
-        <nav aria-label="...">
+    <div class="container" ng-controller="quizController">
+        <nav aria-label="..." ng-if="false" >
             <ul class="pagination pagination-lg">
                 <li class="page-item disabled">
                     <a class="page-link" href="#" tabindex="-1">Previous</a>
@@ -62,64 +62,62 @@
                 </li>
             </ul>
         </nav>
-        <div class="row clearfix">
-        </div>
-        <div class="col-md-1 column">
-        </div>
-        <div class="col-md-10 column">
-            <p class="lead">Completo al 40%</p>
-            <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 40%;">
-                    <span class="sr-only">Completo al 40%</span>
-                </div>
+        <div>
+            <div class="row clearfix">
             </div>
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h3 class="panel-title">
-                        Domanda
-                    </h3>
-                </div>
-                <div class="panel-body">
-                    <div class="radio">
-                        <label>
-            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked=""> Questa è la risposta uno. Fossi in te, la lascerei perdere
-          </label>
-                    </div>
-                    <div class="radio">
-                        <label>
-            <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2"> Forse la due si avvicina... ma non ci giurerei
-          </label>
-                    </div>
-                    <div class="radio">
-                        <label>
-            <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3"> Opzione tre — da' retta, è questa
-          </label>
-                    </div>
-                    <div class="radio">
-                        <label>
-            <input type="radio" name="optionsRadios" id="optionsRadios4" value="option4"> Sulla risposta quattro non ci metterei la mano sul fuoco...
-          </label>
-                    </div>
-
-                </div>
-                <div class="panel-footer">
-                    <a href="#" class="btn btn-primary " role="button">Conferma</a>
-                    <a href="#" class="btn btn-default disabled" role="button">Avanti</a>
-                </div>
+            <div class="row" ng-hide="quizStarted">
+                <span class="btn btn-primary" ng-click="startQuiz()" role="button">Start Quiz</span>
             </div>
             <div class="col-md-1 column">
+            </div>
+            <div class="col-md-10 column">
+                <div id="completionStatus" ng-show="quizStarted || quizCompleted">
+                    <p class="lead">Total no. of Questions {{totalNumberOfQuestions}}, No. of Questions Answered {{numberOfQuestionsAnswered}}, Completed {{completionPecentage|number:2}}%</p>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: {{completionPecentage}}%">
+                            <span class="sr-only">Completed {{completionPecentage}}%</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-primary" ng-model="currentQuestion" ng-show="quizStarted || quizCompleted">
+                    <div id="QuestionHeader" ng-hide="quizCompleted">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">
+                                {{currentQuestion.questionDesc}}
+                            </h3>
+                        </div>
+                        <div class="panel-body" ng-repeat="option in currentQuestion.options">
+                            <div class="radio">
+                                <label>
+                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="{{option.optionId}}" checked=""> {{option.optionDesc}}
+                            </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="QuestionFooter" class="panel-footer" ng-show="quizStarted || quizCompleted">
+                        <a href="#" class="btn btn-primary " ng-click="submitAnswer()" role="button" ng-hide="quizCompleted">Confirm</a>
+                        <!--   <a href="#" class="btn btn-default disabled" role="button">Avanti</a>-->
+                        <a href="#" class="btn btn-primary " ng-click="submitQuiz()" role="button" ng-show="quizCompleted">Submit</a>
+
+                    </div>
+                </div>
+                <div class="col-md-1 column">
+                </div>
             </div>
         </div>
     </div>
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <span class="text-muted">Place sticky footer content here.</span>
+            <span class="text-muted">QuizMe footer.</span>
         </div>
     </footer>
-    <script src="js/jquery.min.js"></script>
+    <!-- <script src="js/jquery.min.js"></script> 
     <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>-->
+    <script src="js/angular.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/questionsController.js"></script>
     <script src="js/custom.js"></script>
 </body>
 
