--- a/UI/index.html
+++ b/UI/index.html
@@ -49,16 +49,11 @@
     </main>
 
     <div class="container" ng-controller="quizController">
-        <nav aria-label="..." ng-if="false" >
+        <nav aria-label="..." ng-show="showProgressBar">
             <ul class="pagination pagination-lg">
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" tabindex="-1">Previous</a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
+
+                <li ng-class="currentQuestion.activeQuestion ? 'page-item disabled' : 'page-item'" ng-repeat="currentQuestion in questionsList">
+                    <a class="page-link" href="#" ng-click="loadCurrentQuestion($index)">{{$index +1}}</a>
                 </li>
             </ul>
         </nav>
@@ -70,9 +65,10 @@
             </div>
             <div class="col-md-1 column">
             </div>
-            <div class="col-md-10 column">
-                <div id="completionStatus" ng-show="quizStarted || quizCompleted">
-                    <p class="lead">Total no. of Questions {{totalNumberOfQuestions}}, No. of Questions Answered {{numberOfQuestionsAnswered}}, Completed {{completionPecentage|number:2}}%</p>
+            <div class="col-md-10 column" ng-cloak>
+                <div id="completionStatus" ng-show="showProgressBar">
+                    <p class="lead">Total no. of Questions {{totalNumberOfQuestions}}, No. of Questions Answered {{numberOfQuestionsAnswered}},
+                        Completed {{completionPecentage|number:2}}%</p>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" style="width: {{completionPecentage}}%">
                             <span class="sr-only">Completed {{completionPecentage}}%</span>
@@ -89,16 +85,31 @@
                         <div class="panel-body" ng-repeat="option in currentQuestion.options">
                             <div class="radio">
                                 <label>
-                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="{{option.optionId}}" checked=""> {{option.optionDesc}}
+                                <input type="radio" name="optionsRadios" id="{{option.optionId}}" value="{{option.optionId}}"> {{option.optionDesc}}
                             </label>
                             </div>
                         </div>
                     </div>
-                    <div id="QuestionFooter" class="panel-footer" ng-show="quizStarted || quizCompleted">
-                        <a href="#" class="btn btn-primary " ng-click="submitAnswer()" role="button" ng-hide="quizCompleted">Confirm</a>
-                        <!--   <a href="#" class="btn btn-default disabled" role="button">Avanti</a>-->
+                    <div id="QuestionFooter" class="panel-footer" ng-show="showProgressBar">
+                        <a href="#" class="btn" ng-click="previousQuestion()" role="button" ng-hide="quizCompleted">previous</a>
+                        <a href="#" class="btn btn-primary " ng-click="submitAnswer()" role="button" ng-hide="quizCompleted">Next</a>
                         <a href="#" class="btn btn-primary " ng-click="submitQuiz()" role="button" ng-show="quizCompleted">Submit</a>
-
+                    </div>
+                </div>
+                <div class="panel" ng-repeat="currentQuestion in questionsList" ng-show="quizDisplayResults">
+                    <div id="QuestionHeader">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">
+                                {{currentQuestion.questionDesc}}
+                            </h3>
+                        </div>
+                        <div class="panel-body" ng-repeat="option in currentQuestion.options">
+                            <div class="radio">
+                                <label>
+                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="{{option.optionId}}" > {{option.optionDesc}}
+                            </label>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-1 column">
